# LocalDropt-APP

./: .gitignore  README.md
.github/workflows/: release.yml
protocol-docs/: PROTOCOL.md
windows-app/src/: index.html  main.js  styles.css
windows-app/src-tauri/: Cargo.toml  tauri.conf.json
windows-app/src-tauri/src/: lib.rs  mobile.html
