[package]
name = "tauri-app"
version = "0.1.0"
description = "LocalDrop - LAN File Transfer via HTTP"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
rfd = "0.14"
dirs = "5"

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Streaming I/O
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
bytes = "1"
http-body-util = "0.1"

# QR code generation
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"

# MIME type detection & URL decode
mime_guess = "2"
urlencoding = "2"
